# CleanPhi

./: README.md  __init__.py  pyproject.toml  setup.py
cleanphi.egg-info/: PKG-INFO  SOURCES.txt
phi.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_clean.py  test_clean_transformer.py
