[tool.poetry]
authors = ["Arya Praneil Pritesh <aryapraneil@gmail.com>"]
classifiers = [
  "Programming Language :: Python :: 3.11"
]
description = "Natural language processing framework to clean sentences and texts."
keywords = ["natural-language-processing", "nlp", "python", "scikit_learn", "scikit", "text-cleaning", "framework"]
license = "GPL-v3"
name = "phi"
packages = [
  {include = "phi"},
]
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
emoji = "^1.0.0"
ftfy = {version = "^6.0"}
pandas = {version = "^1.0.0", optional = true}
python = ">=3.7"
scikit-learn = {version = "^1.0.0", optional = true}
unidecode = {version = "^1.1.1", optional = true}

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
pandas = "*"
pylint = "*"
pytest = "*"
scikit-learn = "*"
unidecode = "*"

[tool.poetry.extras]
gpl = ["unidecode"]
sklearn = ["pandas", "scikit-learn"]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]